--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,20 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'net.thauvin.erik.httpstatus:httpstatus:1.0.5'
+	implementation 'net.thauvin.erik.httpstatus:httpstatus:1.0.5'
+    implementation 'net.thauvin.erik.httpstatus:httpstatus:1.0.5'
+	implementation 'net.thauvin.erik.httpstatus:httpstatus:1.0.5'
+	implementation 'net.thauvin.erik.httpstatus:httpstatus:1.0.5'
+	implementation 'net.thauvin.erik.httpstatus:httpstatus:1.0.5'
+	implementation 'net.thauvin.erik.httpstatus:httpstatus:1.0.5'
+	implementation 'net.thauvin.erik.httpstatus:httpstatus:1.0.5'
+	implementation 'com.github.developeraravinth:HyRoid-BDD:1.0.7'
+	implementation 'com.github.developeraravinth:HyRoid-BDD:1.0.7'
+	implementation 'chat.dim:BA:0.1.2'
+	implementation 'chat.dim:BA:0.1.2'
+	implementation 'chat.dim:BA:0.1.2'
+	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -32,6 +45,7 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.named('test') {
